terraform/5-nat.tf
resource "google_compute_router_nat" "mist_nat" {
  name = "nat"
  project = local.host_project_id
  router = google_compute_router.router.name
  region = local.region
  nat_ip_allocate_option = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"

  depends_on = [google_compute_subnetwork.private]
}
